@@ -98,7 +98,7 @@ public abstract class Operand {
 
         @Override
         public List<Integer> getSourceRegisters() {
-            return Arrays.asList(register);
+            return List.of(register);
         }
 
         public int get() {
@@ -132,7 +132,7 @@ public abstract class Operand {
 
         @Override
         public List<Integer> getSourceRegisters() {
-            return Arrays.asList(register.register);
+            return List.of(register.register);
         }
     }
 }
